<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutblue"
    tools:context=".view.RegistrationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/registration"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="normal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/userid"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="Userid"
                    android:id="@+id/IdInput"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/firstname"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/enter_your_first_name"
                    android:id="@+id/firstname"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/lastname"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/enter_last_name"
                    android:id="@+id/lastname"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="10dp"
                android:text="@string/register"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/LoginFrag"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/already_register_login"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="260dp"
                android:layout_height="30dp"
                android:text="@string/registration_using"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginLeft="60dp"/>

            <ImageView
                android:id="@+id/google"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"/>

        </LinearLayout>



    </LinearLayout>


</FrameLayout>