<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutblue"
    tools:context=".view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/login"
            android:textSize="60sp"
            android:gravity="center"
            android:textStyle="normal"
            android:textColor="#3A3A3A"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/username"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/IdInput"
                    android:hint="@string/username"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/password"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/forget_password"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="Forget Password?"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="260dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/loginbtn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="140dp"
                android:text="@string/login"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/RegistrationFrag"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/new_user_sign_up_here"
                android:textSize="20sp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="260dp"
                android:layout_height="30dp"
                android:text="@string/or_sign_up_using"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginLeft="60dp"/>

            <ImageView
                android:id="@+id/google"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_gravity="center"/>

        </LinearLayout>



    </LinearLayout>

</FrameLayout>